chore: use SonarLint
Signed-off-by: SettingDust <settingdust@gmail.com>