@@ -1,8 +1,8 @@
 package team.ebi.epicbanitem.api.expression;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.ImplementedBy;
 import java.util.List;
+import java.util.Set;
 import net.kyori.adventure.text.Component;
 import org.spongepowered.api.data.persistence.DataContainer;
 import org.spongepowered.api.data.persistence.DataQuery;
@@ -13,8 +13,9 @@ import team.ebi.epicbanitem.expression.ExpressionServiceImpl;
 
 @ImplementedBy(ExpressionServiceImpl.class)
 public interface ExpressionService {
-  ImmutableSet<DataQuery> IGNORED =
-      ImmutableSet.of(
+
+  Set<DataQuery> IGNORED =
+      Set.of(
           Queries.CONTENT_VERSION,
           Queries.WORLD_KEY,
           ItemQueries.UNSAFE_DAMAGE,
@@ -25,7 +26,10 @@ public interface ExpressionService {
     view.values(true)
         .forEach(
             (key, o) -> {
-              if (!IGNORED.contains(key)) container.set(key, o);
+              if (IGNORED.contains(key)) {
+                return;
+              }
+              container.set(key, o);
             });
     return container;
   }
