@@ -6,9 +6,9 @@ import static team.ebi.epicbanitem.util.DataViewRenderer.valueStyle;
 import static team.ebi.epicbanitem.util.DataViewRenderer.wrapList;
 import static team.ebi.epicbanitem.util.DataViewRenderer.wrapObject;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Lists;
 import java.util.List;
+import java.util.Map;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.event.ClickEvent;
 import net.kyori.adventure.text.format.Style;
@@ -18,7 +18,11 @@ import org.spongepowered.api.data.persistence.DataQuery;
 import org.spongepowered.api.data.persistence.DataView;
 import team.ebi.epicbanitem.api.expression.QueryResult;
 
-public class QueryResultRenderer {
+public final class QueryResultRenderer {
+
+  private QueryResultRenderer() {
+  }
+
   private static Component renderKey(String key, DataQuery path) {
     return Component.text()
         .content(key)
@@ -27,21 +31,23 @@ public class QueryResultRenderer {
         .build();
   }
 
-  private static ImmutableList<Component> renderList(
+  private static List<Component> renderList(
       List<?> list, DataQuery expandedQuery, @Nullable QueryResult result) {
-    ImmutableList.Builder<Component> components = ImmutableList.builder();
-    ImmutableMap<String, QueryResult> children =
-        result == null ? ImmutableMap.of() : ImmutableMap.copyOf(result);
+    var components = Lists.<Component>newArrayList();
+    var children =
+        result == null ? Map.<String, QueryResult>of() : Map.copyOf(result);
     for (int i = 0; i < list.size(); i++) {
-      String key = Integer.toString(i);
-      Object value = list.get(i);
-      Style.Builder style = Style.style();
-      if (children.get(key) != null) style.decorate(TextDecoration.BOLD);
-      if (value instanceof DataView) {
+      var key = Integer.toString(i);
+      var value = list.get(i);
+      var style = Style.style();
+      if (children.get(key) != null) {
+        style.decorate(TextDecoration.BOLD);
+      }
+      if (value instanceof DataView view) {
         components.addAll(
             wrapObject(
                 renderKey(key, expandedQuery).applyFallbackStyle(style.build()).append(COLON),
-                renderView((DataView) value, expandedQuery, children.get(key))));
+                renderView(view, expandedQuery, children.get(key))));
       } else {
         String pair = expandedQuery.then(key) + ": " + valueString(value);
         components.add(
@@ -54,35 +60,37 @@ public class QueryResultRenderer {
                 .append(Component.text(value.toString()).style(style.merge(valueStyle(value)))));
       }
     }
-    return components.build();
+    return List.copyOf(components);
   }
 
-  private static ImmutableList<Component> renderView(
+  private static List<Component> renderView(
       DataView view, DataQuery expandedQuery, @Nullable QueryResult result) {
-    ImmutableList.Builder<Component> components = ImmutableList.builder();
-    ImmutableMap<String, QueryResult> children =
-        result == null ? ImmutableMap.of() : ImmutableMap.copyOf(result);
+    var components = Lists.<Component>newArrayList();
+    var children =
+        result == null ? Map.<String, QueryResult>of() : Map.copyOf(result);
     for (DataQuery query : view.keys(false)) {
-      Object value = view.get(query).orElseThrow();
-      String key = query.parts().get(0);
-      DataQuery currentExpandedQuery = expandedQuery.then(key);
-      Style.Builder style = Style.style();
-      if (children.get(key) != null) style.decorate(TextDecoration.BOLD);
-      if (value instanceof DataView subView)
+      var value = view.get(query).orElseThrow();
+      var key = query.parts().get(0);
+      var currentExpandedQuery = expandedQuery.then(key);
+      var style = Style.style();
+      if (children.get(key) != null) {
+        style.decorate(TextDecoration.BOLD);
+      }
+      if (value instanceof DataView subView) {
         components.addAll(
             wrapObject(
                 renderKey(key, currentExpandedQuery)
                     .applyFallbackStyle(style.build())
                     .append(COLON),
                 renderView(subView, currentExpandedQuery, children.get(key))));
-      else if(value instanceof List<?> list)
+      } else if (value instanceof List<?> list) {
         components.addAll(
             wrapList(
                 renderKey(key, currentExpandedQuery)
                     .applyFallbackStyle(style.build())
                     .append(COLON),
                 renderList(list, currentExpandedQuery, children.get(key))));
-      else {
+      } else {
         String pair = expandedQuery.then(key) + ": " + valueString(value);
         components.add(
             renderKey(key, currentExpandedQuery)
@@ -94,10 +102,10 @@ public class QueryResultRenderer {
                 .append(Component.text(value.toString()).style(style.merge(valueStyle(value)))));
       }
     }
-    return components.build();
+    return components;
   }
 
-  public static ImmutableList<Component> render(DataView view, @Nullable QueryResult result) {
+  public static List<Component> render(DataView view, @Nullable QueryResult result) {
     return wrapObject(null, renderView(view, DataQuery.of(), result));
   }
 }
